@@ -1,9 +1,14 @@
 v1.5.(2024.04.13)
 - 自动检测窗口尺寸优化，不包含阴影区域
-- 修复bug：系统的设置窗口最小化时，会被自动检测窗口检测到(Win10 22H2)
 - 后端数据存储优化，.ini 改为 .json 格式
 - 钉图功能: 优化缩放方式，支持加缩放提示预览2秒
 - OCR功能: 对于带 _local 的选项，调整了对齐为一行显示的效果；和提供误差范围用以调整准确率
+- 修复一级工具栏的快捷键失效bug
+- 优化 Tokens 的 UI 为 QStackedWidget 效果
+- 隐藏 Sunny 边框的四角样式
+- 支持选中框为高亮色的效果
+- 修复 自动监测窗口矩形，会错误识别到窗口(1. 系统的设置最小化时在左上角；2. ApplicationFrameHost.exe 左下角)
+- UI 调节一级工具栏的 ToolTip 的样式为白底
 
 v1.3(2024.02.01)
 - Upgrade to v1.3
